shenyu-java-examples/shenyu-java-examples-sofa/shenyu-java-examples-sofa-service/k8s/shenyu-examples-sofa.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-sofa-deployment
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-sofa
    all: shenyu-examples-sofa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-sofa
      all: shenyu-examples-sofa
  strategy: {}
  template:
    metadata:
      labels:
        app: shenyu-examples-sofa
        all: shenyu-examples-sofa
    spec:
      containers:
        - image: shenyu-examples-sofa
          name: shenyu-java-examples-sofa
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            exec:
              command:
                - /bin/sh
                - "-c"
                - wget -q -O - http://localhost:8081/actuator/health | grep UP || exit 1
          ports:
            - containerPort: 28011
            - containerPort: 8888
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-java-examples-sofa-service
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-sofa
    all: shenyu-examples-sofa
spec:
  selector:
    app: shenyu-examples-sofa
    all: shenyu-examples-sofa
  type: NodePort
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
      nodePort: 31111
    - name: "28011"
      port: 28011
      targetPort: 28011
      nodePort: 31112
status:
  loadBalancer: {}
