shenyu-java-examples/shenyu-java-examples-sofa/shenyu-java-examples-sofa-service/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: sofa-find-id
  namespace: shenyu-ingress
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-sofa-enabled: 'true'
    shenyu.apache.org/plugin-sofa-app-name: sofa
    shenyu.apache.org/plugin-context-path-path: /sofa
    shenyu.apache.org/plugin-sofa-path: /sofa/findById
    shenyu.apache.org/plugin-sofa-rpc-type: sofa
    shenyu.apache.org/plugin-sofa-service-name: org.apache.shenyu.examples.sofa.api.service.SofaSingleParamService
    shenyu.apache.org/plugin-sofa-method-name: findById
    shenyu.apache.org/plugin-sofa-params-type: java.lang.String
    shenyu.apache.org/plugin-sofa-rpc-expand: |
      {"loadbalance":"hash","retries":3,"timeout":-1}
spec:
  selector:
    app: shenyu-examples-sofa
  ports:
    - port: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: sofa-find-all
  namespace: shenyu-ingress
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-sofa-enabled: 'true'
    shenyu.apache.org/plugin-context-path-path: /sofa
    shenyu.apache.org/plugin-sofa-app-name: sofa
    shenyu.apache.org/plugin-sofa-path: /sofa/findAll
    shenyu.apache.org/plugin-sofa-rpc-type: sofa
    shenyu.apache.org/plugin-sofa-service-name: org.apache.shenyu.examples.sofa.api.service.SofaSingleParamService
    shenyu.apache.org/plugin-sofa-method-name: findAll
    shenyu.apache.org/plugin-sofa-rpc-expand: |
      {"loadbalance":"hash","retries":3,"timeout":-1}
spec:
  selector:
    app: shenyu-examples-sofa
  ports:
    - port: 8888

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shenyu-ingress
  labels:
    shenyu.apache.org/metadata-labels-1: sofa-find-id
    shenyu.apache.org/metadata-labels-2: sofa-find-all
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-sofa-enabled: 'true'
    shenyu.apache.org/zookeeper-register-address: shenyu-zk:2181
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: shenyu-java-examples-sofa
                port:
                  number: 8888
            path: /sofa/
            pathType: Prefix
